--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ hello
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<nav class=" Hepp for the 2020-21 school year">
 				 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
