--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-hello 
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<nav class=" Hepp for the 2020-21 school year">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
@@ -46,43 +45,61 @@ hello
 				</div>
 			</nav>
 			<h3>
-				h3. Lorem ipsum dolor sit amet.
+				2020-2021 School year Advice
 			</h3>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-4">
 			<h2>
-				Heading
+				Intro
 			</h2>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+				On this website you will find tip and different suggestions for the 2020 school year. We all know that nothing has been the same as last school year and it can be difficult. You can find different study suggestions, apps to download, and advice from students that are in the same situation as you.
 			</p>
 			<p>
 				<a class="btn" href="#">View details »</a>
-			</p>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 		<div class="col-md-4">
 			<h2>
-				Heading
+				Suggestions
 			</h2>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+				In the suggestions column you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind.
 			</p>
 			<p>
 				<a class="btn" href="#">View details »</a>
-			</p>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 		<div class="col-md-4">
 			<h2>
-				Heading
+				Downloads
 			</h2>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+				In this column students will tell you the viewer what they think are import apps for you to download to make turning in your work easier or just to make the school year easier overall.
 			</p>
 			<p>
 				<a class="btn" href="#">View details »</a>
-			</p>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<h3>
+				h3. Lorem ipsum dolor sit amet.
+			</h3>
+			<p>
+				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-6">
+			<h3>
+				h3. Lorem ipsum dolor sit amet.
+			</h3>
+			<p>
+				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 	</div>
 </div>
