--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
 
-			<h3>
+
+
+
+
+
+<h1>
 				2020-2021 School year Advice
-			</h3>
+			</h1>
 		</div>
 	</div>
 	<div class="row">
@@ -52,4 +60,7 @@
 			<h3>
 				h3. Lorem ipsum dolor sit amet.
 			</h3>
+			
+</body>
+</html>
 			
