--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				On this website you will find tip and different suggestions for the 2020 school year. We all know that nothing has been the same as last school year and it can be difficult. You can find different study suggestions, apps to download, and advice from students that are in the same situation as you.
 			</p>
 			<p>
-				<a class="btn" href="#">View details »</a>
+				<a class="btn" href="#"> Put link if need to  »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 		<div class="col-md-4">
@@ -32,7 +32,7 @@
 				In the suggestions column you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind.
 			</p>
 			<p>
-				<a class="btn" href="#">View details »</a>
+				<a class="btn" href="#"> Click here to go to the sugestions page »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 		<div class="col-md-4">
@@ -43,7 +43,7 @@
 				In this column students will tell you the viewer what they think are import apps for you to download to make turning in your work easier or just to make the school year easier overall.
 			</p>
 			<p>
-				<a class="btn" href="#">View details »</a>
+				<a class="btn" href="#">CLick here to go to the sugested downloads page  »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 	</div>
