--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h3>
-				h3. Lorem ipsum dolor sit amet.
+				Tip of the Week 
 			</h3>
 			<p>
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+				In this page you will see the tip of the week for each week of school.The tip could range from study startiges to apps that are important 
+				to dowanload but not mentioed in the download page. Each monday this page will be updated. 
 			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
 		<div class="col-md-6">
-			<h3>
-				h3. Lorem ipsum dolor sit amet.
-			</h3>
 			
 </body>
 </html>
