--- a/suggestions.html
+++ b/suggestions.html
@@ -1,4 +1,63 @@
+<!DOCTYPE html>
 <html>
+<body style="background-color:powderblue;">
 
 
-<html> 
+
+
+
+
+<h1>
+				2020-2021 School year Advice
+			</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<h2> 
+				Intro
+			</h2>
+			<p>
+				On this website you will find tip and different suggestions for the 2020 school year. We all know that nothing has been the same as last school year and it can be difficult. You can find different study suggestions, apps to download, and advice from students that are in the same situation as you.
+			</p>
+			<p>
+				<a class="btn" href="#"> Put link if need to  »</a>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-4">
+			<h2>
+				Suggestions
+			</h2>
+			<p>
+				In the suggestions column you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind.
+			</p>
+			<p>
+				<a class="btn" href="#"> Click here to go to the sugestions page »</a>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-4">
+			<h2>
+				Downloads
+			</h2>
+			<p>
+				In this column students will tell you the viewer what they think are import apps for you to download to make turning in your work easier or just to make the school year easier overall.
+			</p>
+			<p>
+				<a class="btn" href="#">CLick here to go to the sugested downloads page  »</a>
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<h3>
+				Tip of the Week 
+			</h3>
+			<p>
+				In this page you will see the tip of the week for each week of school.The tip could range from study startiges to apps that are important 
+				to dowanload but not mentioed in the download page. Each monday this page will be updated. 
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-6">
+			
+</body>
+</html> 
