--- a/suggestions.html
+++ b/suggestions.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:royalblue;">
 
 
 
@@ -15,9 +15,18 @@
 	<div class="row">
 		<div class="col-md-4">
 			
+			
+			<p> On this page you will see the suggestions that we gathered from other students threw different schools. These suggetions should help 
+			  give you example on what you could do for certian projects and topics. There will also be different study tips or different ways to 
+			  orangize your work. Overall on this page any questions that you have or any toipc or anything in that nature will be covered and there
+		           will different suggetions or resources like youtube chanels or websites to answer any questions. Different ways to organize anything 
+			   or week planers will also be disucced on this page. 
+			</p> 
+			
+			
 			<p>
 				<a class="btn" href="#"> Put link if need to  »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" </p>
 		</div>
 		<div class="col-md-4">
 			
