--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</p>
 			<p>
 				<a class="btn" href="#"> Put link if need to  »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+			</p><img alt="Bootstrap Image Preview" src="hhh" />
 		</div>
 		<div class="col-md-4">
 			<h2>
@@ -33,7 +33,7 @@
 			</p>
 			<p>
 				<a class="btn" href="#"> Click here to go to the sugestions page »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+			</p><img alt="Bootstrap Image Preview" src="jj" />
 		</div>
 		<div class="col-md-4">
 			<h2>
@@ -44,7 +44,7 @@
 			</p>
 			<p>
 				<a class="btn" href="#">CLick here to go to the sugested downloads page  »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+			</p><img alt="Bootstrap Image Preview" src="nn" />
 		</div>
 	</div>
 	<div class="row">
@@ -55,7 +55,7 @@
 			<p>
 				In this page you will see the tip of the week for each week of school.The tip could range from study startiges to apps that are important 
 				to dowanload but not mentioed in the download page. Each monday this page will be updated. 
-			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+			</p><img alt="Bootstrap Image Preview" src="jj" />
 		</div>
 		<div class="col-md-6">
 			
