--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				On this website you will find tips and different suggestions to help you in the 2020-21 school year. We all know that nothing has been the same from last school year and it can be difficult especially if your all virtual learning from home. On this website you can find different study suggestions, apps to download, and advice from students that are in the same situation as you.
 			</p>
 			<p>
-				<a class="btn" href="#"> Put link if need to  »</a>
+				<a class="btn" href="#">  »</a>
 			</p><img alt="Picture of onlie school"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ1-62Zh6NpDYkQ9raq9K6wygyJ4QHpuTwGPg&usqp=CAU" />
 		</div>
 		<div class="col-md-4">
