--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				In the suggestions page you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind. Or different ways to schedule your work, or different ways to study and retain information. 
 			</p>
 			<p>
-				<a class="btn" href="#"> Click here to go to the sugestions page »</a>
+				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
 			</p><img alt=" Sugetions pictiure " src="https://s3.amazonaws.com/media.eremedia.com/uploads/2011/04/21225135/HR-suggestions.jpg" />
 		</div>
 		<div class="col-md-4">
