--- a/downloads.html
+++ b/downloads.html
@@ -25,7 +25,9 @@
 			
 			
 			<p>
-				<a class="btn" href="#"> Put link if need to  »</a>
+				<a class="btn" href="index.html"> Click here to go to the main page   »</a>
+				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
+				<a class="btn" href="tipofweek.html"> Click here to go to the tip of the week page »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" </p>
 		</div>
 		<div class="col-md-4">
