--- a/tipofweek.html
+++ b/tipofweek.html
@@ -23,7 +23,7 @@
 			
 			
 			<p>
-				<a class="btn" href="index.html"> Put link if need to  »</a>
+				<a class="btn" href="index.html"> Click here to get back to the main page   »</a>
 				<a class="btn" href="download.html"> Click here to go to the sugestions page »</a>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://www.weathernationtv.com/app/uploads/2019/03/tips.jpg"  width="200" height="200"> </p>
