--- a/downloads.html
+++ b/downloads.html
@@ -28,7 +28,7 @@
 				<a class="btn" href="index.html"> Click here to go to the main page   »</a>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
 				<a class="btn" href="tipofweek.html"> Click here to go to the tip of the week page »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" </p>
+			</p><img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" 
 		</div>
 		<div class="col-md-4">
 			
