--- a/suggestions.html
+++ b/suggestions.html
@@ -16,11 +16,12 @@
 		<div class="col-md-4">
 			
 			
-			<p> On this page you will see the suggestions that we gathered from other students threw different schools. These suggetions should help 
-			  give you example on what you could do for certian projects and topics. There will also be different study tips or different ways to 
-			  orangize your work. Overall on this page any questions that you have or any toipc or anything in that nature will be covered and there
-		           will different suggetions or resources like youtube chanels or websites to answer any questions. Different ways to organize anything 
-			   or week planers will also be disucced on this page. 
+			<p> On this page, you will see the suggestions that we gathered from other students threw different schools.
+				These suggestions should help give you example on what you could do for certain projects and topics. 
+				There will also be different study tips or different ways to organize your work. Overall on this page
+				any questions that you have or any topic or anything in that nature will be covered and there will different
+				suggestions or resources like YouTube channels or websites to answer any questions. Different ways to organize
+				anything or week planers will also be disused on this page. 
 			</p> 
 			
 			
