--- a/downloads.html
+++ b/downloads.html
@@ -16,9 +16,11 @@
 		<div class="col-md-4">
 			
 			
-			<p> On this page is talks bout different programs and apps or extentions yous should have on your desktop or laptop to make this school year easier. Some of the
-      downloads would be to take notes easier or to screen record. There will be multiple apps or examples for each mac or windows user.There will be descrittions for each
-      download cincludig pros and cons. LInks will not be provided downalod but where to find it either in the app store or online extention will be included. 
+			<p> This page talks about the different programs, apps or extensions yours should have on your desktop 
+				or laptop to make this school year easier. Some of the downloads would be to take notes easier
+				or to screen record. There will be multiple apps or examples for each mac or windows user. There
+				will be descriptions for each download with pros and cons. Links will not be provided download but 
+				where to find it either in the app store or online.
       
       
 			</p> 
