--- a/tipofweek.html
+++ b/tipofweek.html
@@ -16,9 +16,11 @@
 		<div class="col-md-4">
 			
 			
-			<p> On this page there will include tips on every friday to help you evalute your progress for that week and may provide a format to think about making goals 
-      for the next week. There will also be other apps to download or other suggetions that werent included on the other page. This page is mostly to self refelct 
-      on your progress on that week and give you differnt tips on how to improve. 
+			<p> On this page, there will be tips every Friday to help you evaluate your progress for that
+				week and may provide a format to think about making goals for the next week. There will
+				also be other apps to download or other suggestions that weren’t included on the other page.
+				This page is mostly to self-reflect on your progress on that week and give you different tips 
+				on how to improve.
 			</p> 
 			
 			
