--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				Downloads
 			</h2>
 			<p>
-				On this page students will tell you what they think are import apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simplifier. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows computers and laptops.
+				On this page students will tell you what they think are import apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simplifier. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows, Laptops or desktops. 
 			</p>
 			<p>
 				<a class="btn" href="downloads.html">Click here to go to the sugested downloads page  »</a>
