--- a/downloads.html
+++ b/downloads.html
@@ -40,7 +40,11 @@
 				
 			</ol>
  
+			<p>   Myhomework is a progrhma where all of your homework assienments will be laied out on a clander. You can 
+			      see all your assentmts projects and tests/quizes will be. If you strugle with organization or are forgetful then this is something 
+				you should deffentetly consider, it is free and is compatiable with IOS,Andriod, Windows, Mac, and Kindle Fire. 
 			
+			</p> 
 			
 			</body> 
 		</htm> 
