--- a/tipofweek.html
+++ b/tipofweek.html
@@ -3,7 +3,15 @@
 <body style="background-color:powderblue  ;">
 
 
-G-9YYYZX0V40
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZZPTD8NJ1K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZZPTD8NJ1K');
+</script>
 
 
 
