--- a/suggestions.html
+++ b/suggestions.html
@@ -41,5 +41,15 @@
 		</div>
 		<div class="col-md-4">
 			
+			<ol> 
+				<li> When you are in class or doing homework/classwork you should be in a quite place in your house. When decideing where your setup
+				should be find a place where there is little noise through the day, little amounts of people walking by or near you. Also it shoul 
+				comfortable to you, acouple examples are your desk in your room, basment, office, or empty guest room. HAving the room you work in 
+				quite with little distractions wil cause you to pay more attention and make it easier to learn and get your work done. </li> 
+				
+				
+			</ol>
+			
+			
 			</body> 
 		</htm> 
