--- a/tipofweek.html
+++ b/tipofweek.html
@@ -40,5 +40,14 @@
 		</div>
 		<div class="col-md-4">
 			
+			<ol> 
+				<li> A good way to be able to get your work done is to setup a rutine. Get up around the same time and get ready the same way. 
+				Then go to class and set up a rutine after class to maximize your time. YOu dont have to do your school work right after school ends
+				if you dont have time but set a time range to get it done. THis will create repetion and will make getting your work done so much easier. </li> 
+				
+				
+			</ol>
+			
+			
 			</body> 
 		</htm> 
