--- a/suggestions.html
+++ b/suggestions.html
@@ -24,10 +24,10 @@
 		<div class="col-md-4">
 			
 			
-			<p> On this page, you will see the suggestions that we gathered from other students threw different schools.
-				These suggestions should help give you example on what you could do for certain projects and topics. 
+			<p> On this page, you will see the suggestions that we gathered from other students from different schools.
+				These suggestions will you with some ideas for certain projects and topics. 
 				There will also be different study tips or different ways to organize your work. Overall on this page
-				any questions that you have or any topic or anything in that nature will be covered and there will different
+				any questions that you have on any topic will be covered and there will different
 				suggestions or resources like YouTube channels or websites to answer any questions. Different ways to organize
 				anything or week planers will also be disused on this page. 
 			</p> 
@@ -42,13 +42,17 @@
 		<div class="col-md-4">
 			
 			<ol> 
-				<li> When you are in class or doing homework/classwork you should be in a quite place in your house. When decideing where your setup
-				should be find a place where there is little noise through the day, little amounts of people walking by or near you. Also it shoul 
-				comfortable to you, acouple examples are your desk in your room, basment, office, or empty guest room. HAving the room you work in 
-				quite with little distractions wil cause you to pay more attention and make it easier to learn and get your work done. </li> 
+				<li> When you are in class or doing homework/classwork you should be in a quite place in your house. When deciding where your setup
+				should be, find a place where there is little noise throughout the day, with little amounts of people walking by or near you. It should also be  
+				comfortable to you, acouple examples are your desk in your room, basment, office, or empty guest room. Having a quite room to work in  
+				with little distractions will cause you to pay more attention and make it easier to learn and get your work done. </li> 
 				
 				<li> 
-					
+				Each day you should have 3 to 5 goals you have. If you have 3-5 goals you want to accomplish and hold your self accountable then getting 
+				things done will become so much easier. Once you set a goal with things you need to get done that day you focus more. You dont get as distracted
+				you will put more importance on thoes goals instead of doing things that dont have anything to do with your goal. If you create golas with your
+				school work then you will finish your notes, study, or start a project that you need to get done. And not get as distracted with your phone or video games the school 
+				work will not pile on. 
 				</li> 
 			</ol>
 			
