--- a/downloads.html
+++ b/downloads.html
@@ -54,7 +54,7 @@
 			<p>   My homework is a program where all of your homework assienments will be laid out on a calender. You can 
 			      see all your assignments, projects and tests/quizes will be. If you struggle with organization or are forgetful then this is something 
 				you should definitely consider, it is free and is compatiable with IOS,Andriod, Windows, Mac, and Kindle Fire. 
-			https://myhomeworkapp.com/ 
+			  <a href="https://myhomeworkapp.com/ "> Click hear to get Myhomework</a>
 			</p> 
 			
 			<p> Evernote is app that helps you organize all your notes. In online school you will be taking a lot of notes online on your computer. 
