--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				Intro
 			</h2>
 			<p>
-				On this website you will find tips and different suggestions to help you in the 2020-21 school year. We all know that nothing has been the same from last school year and it can be difficult especially if your are learning all virtually from home. On this website you can find different study suggestions, apps to download, and advice from students that are in the same situation as you.
+				On this website you will find tips and different suggestions to help you with the 2020-21 school year. We all know that nothing has been the same from last school year and it can be difficult, especially if your are learning all virtually from home. On this website you can find different study suggestions, apps to download, and advice from students that are in the same situation as you. All the information you need to be succsesful this school year is here. 
 			</p>
 			<p>
 				
@@ -37,7 +37,7 @@
 				Suggestions
 			</h2>
 			<p>
-				In the suggestions page you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind. Or different ways to schedule your work, or different ways to study and retain information. 
+				In the suggestions page you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind, different ways to schedule your work, or different ways to study and retain information. 
 			</p>
 			<p>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
@@ -48,7 +48,7 @@
 				Downloads
 			</h2>
 			<p>
-				On this page you will learn important apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simpler. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows, laptops or desktops. 
+				On this page you will learn about some important apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simpler. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows, laptops or desktops. 
 			</p>
 			<p>
 				<a class="btn" href="downloads.html">Click here to go to the sugested downloads page  »</a>
