--- a/downloads.html
+++ b/downloads.html
@@ -37,7 +37,7 @@
 			<p>
 				<a class="btn" href="index.html"> Click here to go to the main page   »</a>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
-				<a class="btn" href="tipofweek.html"> Click here to go to the tip of the week page »</a>
+				<a class="btn" href="tipofweek.html"> Click here to go to the Shedule Suggestions page »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" 
 		</div>
 		<div class="col-md-4">
