--- a/downloads.html
+++ b/downloads.html
@@ -64,7 +64,7 @@
 				Evernote helps you orangize everything you write down, each page of notes can be organized into folders, notebooks, or exported 
 				into other app in your computer like Microsoft Word or Google Docs if you need to. You can downlod the app on your phone so you can
 				finish your notes on the fly if you need to. This app is free and is avalible on Mac, Windows, IOS, and Android. 
-				 <a href="https://evernote.com/ " Click hear to get Evernote</a>
+				 <a href="https://evernote.com/ " target="_blank"> Click hear to get Evernote</a>
 				
 				
 			</p> 
