--- a/downloads.html
+++ b/downloads.html
@@ -49,7 +49,7 @@
 				<li> Easy Bib</li> 
 				<li> Self Control</li> 
 				<li> Any.Do</li> 
-				<li> Duolingo<li> 
+				<li> Duolingo</li> 
 			
 				
 				
