--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				Suggestions
 			</h2>
 			<p>
-				In the suggestions page you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind, different ways to schedule your work, or different ways to study and retain information. 
+			<center> 	In the suggestions page you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind, different ways to schedule your work, or different ways to study and retain information. </center> 
 			</p>
 			<p>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
@@ -56,7 +56,7 @@
 				Downloads
 			</h2>
 			<p>
-				On this page you will learn about some important apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simpler. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows, laptops or desktops. 
+			<center> 	On this page you will learn about some important apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simpler. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows, laptops or desktops. </center> 
 			</p>
 			<p>
 				<a class="btn" href="downloads.html">Click here to go to the sugested downloads page  »</a>
@@ -70,7 +70,7 @@
 			</h3>
 			<p>
 			
-				On this page you will see sheduling tips to help you througout the week. The suggestions could range from study strategies to differt ways to sperate your day and work. If you sturgel with procrastination and fall behind on your work this is something you need to look at. </p>
+			<center> 	On this page you will see sheduling tips to help you througout the week. The suggestions could range from study strategies to differt ways to sperate your day and work. If you sturgel with procrastination and fall behind on your work this is something you need to look at. </p> </center> 
 				
 			 <p> <a class="btn" href="tipofweek.html">Click here to go to the Shedule Suggestions page  »</a> 
 		
