--- a/tipofweek.html
+++ b/tipofweek.html
@@ -36,7 +36,7 @@
 				<a class="btn" href="index.html"> Click here to get back to the main page   »</a>
 				<a class="btn" href="downloads.html"> Click here to go to the downloads page   »</a>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://lh3.googleusercontent.com/proxy/Qw9gksfzd_hZwva2Ytnksuz5BeMcZCsf2FCr1EKvTdB1-qIeFUnBJouKqZPKXzXr-f_6Kma5GDOt79tqK5hD4dpuGJBow0DYVg"  width="200" height="200"> </p>
+			</p><img alt="Bootstrap Image Preview" src="https://lh3.googleusercontent.com/proxy/Qw9gksfzd_hZwva2Ytnksuz5BeMcZCsf2FCr1EKvTdB1-qIeFUnBJouKqZPKXzXr-f_6Kma5GDOt79tqK5hD4dpuGJBow0DYVg"  width="200" height="200"> </img>
 		</div>
 		<div class="col-md-4">
 			
