--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+    <title> 2021 School Year advice</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
@@ -40,7 +40,7 @@
 
 
 <h1>
-				2020-2021 School Year Advice
+	<center> 2020-2021 School Year Advice </center> 
 			</h1>
 		</div>
 	</div>
