--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		</div>
 	</div>
 	<div class="row">
+		<center> 
 		<div class="col-md-7">
 			<h2> 
 				Intro
@@ -55,8 +56,9 @@
 			<p>
 				
 			</p><img alt="Picture of onlie school"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ1-62Zh6NpDYkQ9raq9K6wygyJ4QHpuTwGPg&usqp=CAU" />
-		</div>
-		<div class="col-md-7">
+		</div> </center> 
+		<div class="col-md-3">
+			</center> 
 			<h2>
 				Suggestions
 			</h2>
@@ -67,7 +69,7 @@
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
 			</p><img alt=" Sugetions pictiure " src="https://s3.amazonaws.com/media.eremedia.com/uploads/2011/04/21225135/HR-suggestions.jpg" width="300" height"300"/>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-3">
 			<h2>
 				Downloads
 			</h2>
@@ -80,7 +82,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-3">
 			<h3>
 				Schedule Suggestions  
 			</h3>
@@ -92,7 +94,7 @@
 		
 			</p> <img alt="TIp of the week "src="https://webstockreview.net/images/schedule-clipart.jpg"  width="280" height="275" />
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-3">
 			
 				
 </div>
