--- a/tipofweek.html
+++ b/tipofweek.html
@@ -32,7 +32,7 @@
 	
 
 <h1>
-				Shedule Suggestions page  
+	<center> 	Shedule Suggestions page  </center>  
 			</h1>
 		</div>
 	</div>
@@ -47,14 +47,16 @@
 				on how to improve. </center> 
 			</p> 
 			
-			
+			<p> <img alt="Bootstrap Image Preview" src="https://lh3.googleusercontent.com/proxy/xkXIS7jBKjyfiq0Ytxp4Lz_150ofYL8WloYpC3nGJCcROzsFc3C1_zjRqNdVOLjsTsGl_xZagVcZ8MvCsMj9Vp3y1pj0VbsTJg"  width="200" height="200"> </img> </p>
+		
 			<p>
 				<a class="btn" href="index.html"> Click here to get back to the main page   »</a>
 				<a class="btn" href="downloads.html"> Click here to go to the downloads page   »</a>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://lh3.googleusercontent.com/proxy/xkXIS7jBKjyfiq0Ytxp4Lz_150ofYL8WloYpC3nGJCcROzsFc3C1_zjRqNdVOLjsTsGl_xZagVcZ8MvCsMj9Vp3y1pj0VbsTJg"  width="200" height="200"> </img>
-		</div>
-		<div class="col-md-4">
+			</p>
+
+</div>
+		<div class="col-md-7">
 			
 			<ol> 
 				<li> <center> A good way to be able to get your work done is to setup a routine. Get up around the same time and get ready the same way. 
