--- a/tipofweek.html
+++ b/tipofweek.html
@@ -47,7 +47,7 @@
 				on how to improve. </center> 
 			</p> 
 			
-			<p> <img alt="Bootstrap Image Preview" src="https://www.google.com/url?sa=i&url=http%3A%2F%2Fclipart-library.com%2Fschedule-cliparts.html&psig=AOvVaw3SCrUQ9zSazPuHff02SOhs&ust=1615556657792000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKiVq9-vqO8CFQAAAAAdAAAAABAD"  width="200" height="200"> </img> </p>
+			<p> <img alt="Bootstrap Image Preview" src="https://lh3.googleusercontent.com/proxy/IKlczzBdFYNee63ygxrRKzeSvCGz1K32DUpXxnMqZgJ5yVLkOJLr3Ar6YJBpqRYXr14T1ijOgtPBsLZUzH0rPqzAB2gq93Tgbw"  width="200" height="200"> </img> </p>
 		
 			<p>
 				<a class="btn" href="index.html"> Click here to get back to the main page   »</a>
