--- a/tipofweek.html
+++ b/tipofweek.html
@@ -47,8 +47,12 @@
 				on how to improve. </center> 
 			</p> 
 			
-			<p> <img alt="https://i.pinimg.com/originals/d4/10/e2/d410e2738fb5e4a92799969e78f1d3a4.jpg"  width="200" height="200"> </img> </p>
-		
+			
+			<p>
+				<img alt="Bootstrap Image Preview" src="https://i.pinimg.com/originals/d4/10/e2/d410e2738fb5e4a92799969e78f1d3a4.jpg" width="200" height="200"> </img> </p>
+			
+			
+			
 			<p>
 				<a class="btn" href="index.html"> Click here to get back to the main page   »</a>
 				<a class="btn" href="downloads.html"> Click here to go to the downloads page   »</a>
