--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
 			<p>
 				<a class="btn" href="downloads.html">Click here to go to the sugested downloads page  »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://images-na.ssl-images-amazon.com/images/I/41RxsA7ia9L.png"  width="250" height="275" />
+		</div>
+	</div> 
+	<div class="row">
 		
-		<div class="col-md-3">
+			
+			<div class="col-md-3">
 			<h3>
 				Schedule Suggestions  
 			</h3>
