--- a/downloads.html
+++ b/downloads.html
@@ -13,12 +13,27 @@
 </script>
 
 	<head>
-    
+    </script>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> 2021 School Year advice Downloads page</title>
+	 <title> 2021 School Year advice Downloads page</title>
+	
+    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="author" content="LayoutIt!">
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+  </head> 
+
 
    
-  </head> 
+
+   
+  
 
 
 
@@ -154,6 +169,10 @@
 			
 			</p> 
 			
+			
+			<p> <center> If your scool uses Google Meet then you should deffinetly download the app, on both your computer and phone. Having it on both 
+				lets you have freedom and you dont have to worry about something happeing. If your computer isnt working then you can use your phone. 
+				Even just to talk or work with your friends google meet is easier to use then zoom.  <a href=" https://meet.google.com/ " target="_blank"> Click hear to set up your account </a> </center> 
 			</body> 
 		</htm> 
 
