--- a/downloads.html
+++ b/downloads.html
@@ -12,8 +12,7 @@
   gtag('config', 'G-ZZPTD8NJ1K');
 </script>
 
-	<head>
-    </script>
+	
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -77,7 +76,13 @@
 				<li> Tinycards </li> 
 			
 				
-				
+			
+			
+			</div>
+	
+			
+			<div class="row">
+		<div class="col-md-4">	
 			</ol>
  
 			<p>   <center> My homework is a program where all of your homework assienments will be laid out on a calender. You can 
@@ -173,7 +178,9 @@
 			<p> <center> If your scool uses Google Meet then you should deffinetly download the app, on both your computer and phone. Having it on both 
 				lets you have freedom and you dont have to worry about something happeing. If your computer isnt working then you can use your phone. 
 				Even just to talk or work with your friends google meet is easier to use then zoom.  <a href=" https://meet.google.com/ " target="_blank"> Click hear to set up your account </a> </center> 
-			</body> 
+			
+				</div>
+				</body> 
 		</htm> 
 
 		
