--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 				<a class="btn" href="downloads.html">Click here to go to the sugested downloads page  »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://images-na.ssl-images-amazon.com/images/I/41RxsA7ia9L.png"  width="250" height="275" />
 	
-	
+	</div> 
+	</div>
 		
 			
 			<div class="col-md-3">
