--- a/tipofweek.html
+++ b/tipofweek.html
@@ -163,7 +163,7 @@
 				<hr> 
 				<li> <center> To have the most effective schedual for you, you need to understand what type of person you are. If you work better during the 
 					day or night. When is it the best time for you to get things done and do you have any other responsiblites. Knowing your situation and 
-					creating something that works around that is the best and most effective way to get things done. 
+					creating something that works around that is the best and most effective way to get things done. </center>
 					
 					
 				</li> 
