--- a/downloads.html
+++ b/downloads.html
@@ -29,11 +29,6 @@
   </head> 
 
 
-   
-
-   
-  
-
 
 
 <h1>
@@ -59,9 +54,11 @@
 				<a class="btn" href="index.html"> Click here to go to the main page   »</a>
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
 				<a class="btn" href="tipofweek.html"> Click here to go to the Shedule Suggestions page »</a>
-			</p><img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" 
+			</p>
+			<img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" 
 		</div>
-		<div class="col-md-4">
+		
+			<div class="col-md-5">
 			
 			<ol> 
 				<li> Myhomework </li> 
@@ -75,17 +72,12 @@
 				<li> Studyblue  </li> 
 				<li> Tinycards </li> 
 			
-				
-			
-			
-			</div>
-	
-				
+			</div>	
 			</ol>
 			
 			
 			<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-7">
  
 			<p>   <center> My homework is a program where all of your homework assienments will be laid out on a calender. You can 
 			      see all your assignments, projects and tests/quizes will be. If you struggle with organization or are forgetful then this is something 
