--- a/downloads.html
+++ b/downloads.html
@@ -56,7 +56,7 @@
 			</p>
 			<img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" 
 		</div>
-		
+		<div class="row"> 
 			<div class="col-md-5">
 			
 			<ol> 
