--- a/downloads.html
+++ b/downloads.html
@@ -55,7 +55,7 @@
 				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
 				<a class="btn" href="tipofweek.html"> Click here to go to the Shedule Suggestions page »</a>
 			</p>
-			<img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" 
+			<img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" </img> 
 		</div>
 		 
 			<div class="col-md-5">
