--- a/downloads.html
+++ b/downloads.html
@@ -58,7 +58,7 @@
 			<img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" </img> 
 		</div>
 		 
-			<div class="col-md-5">
+			<div class="col-md-7">
 			
 			<ol> 
 				<li> Myhomework </li> 
@@ -77,6 +77,7 @@
 			
 			 
 				<div class="col-md-7"> 
+					<center> 
  <hr>
 			<p>   <center> My homework is a program where all of your homework assienments will be laid out on a calender. You can 
 			      see all your assignments, projects and tests/quizes will be. If you struggle with organization or are forgetful then this is something 
@@ -172,6 +173,8 @@
 				lets you have freedom and you dont have to worry about something happeing. If your computer isnt working then you can use your phone. 
 				Even just to talk or work with your friends google meet is easier to use then zoom.  <a href=" https://meet.google.com/ " target="_blank"> Click hear to set up your account </a> </center> 
 			<hr> 
+						
+					</center> 			
 				</div>
 				</body> 
 		</htm> 
