--- a/downloads.html
+++ b/downloads.html
@@ -57,7 +57,23 @@
 			</p>
 			<img alt="Bootstrap Image Preview" src="https://cdn.hswstatic.com/gif/download-legit-250x150.jpg" </img> 
 		</div>
-		 
+		 <div class="col-md-3"> 
+					 <ol> 
+				<li> Myhomework </li> 
+				<li> Evernote </li> 
+				<li> Dropbox </li> 
+				<li> Easy Bib</li> 
+				<li> Self Control</li> 
+				<li> Any.Do</li> 
+				<li> Duolingo</li> 
+				<li> Zoom </li> 
+				<li> Studyblue  </li> 
+				<li> Tinycards </li> 
+			
+				</ol> 
+	
+								
+				</div>
 			<div class="col-md-7">
 			<hr>
 			<p>   <center> My homework is a program where all of your homework assignments will be laid out on a calender. You can 
