--- a/tipofweek.html
+++ b/tipofweek.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue  ;">
+<body style="background-color: orange  ;">
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
