--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				Intro
 			</h2>
 			<p>
-			<center> 	On this website you will find tips and different suggestions to help you with the 2020-21 school year. We all know that nothing has been the same from last school year and it can be difficult, especially if your are learning all virtually from home. On this website you can find different study suggestions, apps to download, and advice from students that are in the same situation as you. All the information you need to be succsesful this school year is here. </center> 
+			<center> 	On this website you will find tips and different suggestions to help you with the 2020-21 school year. We all know that nothing has been the same from last school year and it can be difficult, especially if your are learning all virtually from home. On this website you can find different study suggestions, apps to download, and advice from students that are in the same situation as you. All the information you need to be successful this school year is here. </center> 
 			</p>
 			<p>
 				
