--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</h3>
 			<p>
 			
-			<center> 	On this page you will see sheduling tips to help you througout the week. The suggestions could range from study strategies to differt ways to sperate your day and work. If you sturgel with procrastination and fall behind on your work this is something you need to look at. </p> </center> 
+			<center> 	On this page you will see scheduling tips to help you throughout the week. The suggestions could range from study strategies to different ways to separate your day and work. If you struggle with procrastination and fall behind on your work this is something you need to look at. </p> </center> 
 				
 			 <p> <a class="btn" href="tipofweek.html">Click here to go to the Shedule Suggestions page  »</a> 
 		
