--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<center> 	In the suggestions page you will find different suggestions that current students think would be helpful for you to know. This could range from emailing teachers or when to tell the teacher you are falling behind, different ways to schedule your work, or different ways to study and retain information. </center> 
 			</p>
 			<p>
-				<a class="btn" href="suggestions.html"> Click here to go to the sugestions page »</a>
+				<a class="btn" href="suggestions.html"> Go to the sugestions page »</a>
 			</p><img alt=" Sugetions pictiure " src="https://s3.amazonaws.com/media.eremedia.com/uploads/2011/04/21225135/HR-suggestions.jpg" width="300" height"300"/>
 		</div>
 		<div class="col-md-5">
@@ -78,7 +78,7 @@
 			<center> 	On this page you will learn about some important apps or extensions for you to download. These apps and extensions are designed to make the school year easier and simpler. The apps could help you make turning in your work easier or help you take notes or doing your work easier. If you have a mac don’t worry there will suggestions for both mac and windows, laptops or desktops. </center> 
 			</p>
 			<p>
-				<a class="btn" href="downloads.html">Click here to go to the sugested downloads page  »</a>
+				<a class="btn" href="downloads.html">Go to the sugested downloads page  »</a>
 			</p><img alt="Bootstrap Image Preview" src="https://images-na.ssl-images-amazon.com/images/I/41RxsA7ia9L.png"  width="250" height="275" />
 	
 	</div> 
@@ -93,7 +93,7 @@
 			
 			<center> 	On this page you will see scheduling tips to help you throughout the week. The suggestions could range from study strategies to different ways to separate your day and work. If you struggle with procrastination and fall behind on your work this is something you need to look at. </p> </center> 
 				
-			 <p> <a class="btn" href="tipofweek.html">Click here to go to the Shedule Suggestions page  »</a> 
+			 <p> <a class="btn" href="tipofweek.html">Go to the Shedule Suggestions page  »</a> 
 		
 			</p> <img alt="TIp of the week "src="https://webstockreview.net/images/schedule-clipart.jpg"  width="280" height="275" />
 		</div>
